--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="myDocument">
 
 <head>
     <title>Mercedes-Benz</title>
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body id="myBody">
+<body class="myDocument">
     <div class="subMenu" id="hideSubMenu">
         <ul>
             <li class="subNameTitle"><a href="#"><i class="fa fa-taxi"></i><span>Product page</span></a></li>
@@ -61,7 +61,8 @@
                     <button class="navbar-toggler" id="btnMenu" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation" onclick="disable_scroll();">
-                        <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
+                        <!-- <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span> -->
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
                 <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
